fixed horizontal scroll in my-board

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,13 @@
     --thm:rgba(51,102,153,1);
     --tw-color : rgba(255,204,51);
 /* Dark Mode */
+    /* --pale-dark:#0e153a;
+    --dark:#0e153a; */
     --pale-dark:rgba(32,32,32);
-    --dark:rgba(24,24,24);    
+    --dark:rgba(24,24,24);   
     --snow:rgba(255,255,255,0.9);
     --pale-snow:rgba(255,255,255,0.75);
-
+    /* #071e3d */
 /* Light mode */
     /* --pale-dark:rgba(251,253,255);
     --dark:rgba(252,252,252);
@@ -181,12 +183,12 @@ header ( width is 100% , height: 8%)
 }
 
 #main #main-area{
-    
     width:82%;
-    max-width:82%;
+    /* max-width:82%; */
     height:auto;
     margin-left: 18vw !important;
     transition: 0.5s all;
+    overflow-y: hidden;
 }
 
 #main #main-area.sidebar-hide{
@@ -498,12 +500,12 @@ body{
 /* TaskCard */
 
 .scrolling-wrapper {
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
     /* overflow-y: hidden; */
     white-space: nowrap;
   box-sizing: border-box;
   /* height:auto; */
-  height: 82vh;
+  /* height: 82vh; */
   padding: 16px 12px 0;
   /* position: relative; */
   background-color:rgb(225, 225, 225) !important; 
